# PYdev.modS.v1

./: .gitignore  debug.sh  environment.yml  pyproject.toml
app/: __init__.py  main.py
notebooks/: 01_test.ipynb
tests/: test_main.py
